--- a/styles.css
+++ b/styles.css
@@ -15,5 +15,6 @@ h1 {
     margin: 10px;
     padding: 20px 10px; 
     border-radius: 25%;
-    float: right;
+    position: relative;
+    left: 50px;
 }
