--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,24 @@ h1 {
     flex-wrap:wrap;
  } 
 .project {
-    width: 100%;
+    width: 30%;
     margin: 10px;
     padding: 20px 10px; 
     border-radius: 25%;
+}
+.project img{
+width: 300px;
+height: 300px;
+margin: 10px;
+border: 2px solid rgb(9, 83, 105); /* choose a color */
+display: block;
+margin: auto;
+}
+a { /* change the appearance of ALL links */
+text-decoration: none;
+color: rgb(214, 173, 180);
+}
+.project p { /* change the appearance of paragraph tags inside .project divs */
+text-align: center;
+margin: 15px;
 }
