--- a/div_res_style.css
+++ b/div_res_style.css
@@ -1,6 +1,6 @@
 body {
   background: #fff;
-  font-family: "Times New Roman", Arial, Calibri, sans-serif;
+  font-family: Calibri,
   font-size: 12pt;
   color: #000;
   margin: 0.5in; /* matches margin requirement */
