--- a/div_res_style.css
+++ b/div_res_style.css
@@ -1,19 +1,20 @@
 body {
   background: #fff;
   font-family: Calibri;
-  font-size: 12pt;       
+  font-size: 12pt;
   color: #000;
-  margin: 0.5in;           
+  margin: 0.5in;
+  line-height: 1.4;
 }
 h1 {
-  font-size: 18pt;         
+  font-size: 18pt;
   font-weight: bold;
   text-align: center;
-  margin: 0 0 16px 0;      
+  margin: 0 0 12pt 0;
 }
 .header-contact {
   text-align: center;
-  margin: 0 0 24px 0;      
+  margin: 0 0 24pt 0;
   font-size: 12pt;
 }
 .section-title {
@@ -21,21 +22,25 @@ h1 {
   font-weight: bold;
   text-decoration: underline;
   text-align: left;
-  margin: 24px 0 12px 0;
+  margin: 24pt 0 12pt 0;
 }
 .section-content {
   text-align: left;
 }
 .section-content p {
   font-size: 12pt;
-  margin: 6px 0;
+  margin: 6pt 0;
 }
 .section-content ul {
-  margin: 6px 0;
-  padding-left: 20px;
+  margin: 6pt 0;
+  padding-left: 24pt;
   list-style-type: disc;
+  list-style-position: outside;
 }
 .section-content li {
   font-size: 12pt;
-  margin: 6px 0;           
+  margin: 4pt 0;
+}
+.role {
+  font-style: italic;
 }
