--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 h1 {
+    font-size: 20pt;
     color: ForestGreen;
     text-align: center;
 }
