--- a/styles.css
+++ b/styles.css
@@ -17,11 +17,11 @@ h1 {
     padding: 20px 10px; 
     border-radius: 25%;
 }
-a { /* change the appearance of ALL links */
+a {
 text-decoration: none;
 color: rgb(58, 4, 83);
 }
-.project p { /* change the appearance of paragraph tags inside .project divs */
+.project p { 
 text-align: center;
 margin: 15px;
 }
