--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 h1 {
-    font-size: 25pt;
+    font-size: 25px;
     color: ForestGreen;
     text-align: center;
 }
@@ -19,7 +19,7 @@ h1 {
 }
 .skills img {
     width: auto;
-    height: 200px;
+    height: 300px;
 }
 a {
 text-decoration: none;
