--- a/styles.css
+++ b/styles.css
@@ -18,8 +18,13 @@ h1 {
     border-radius: 25%;
 }
 .skills img {
+    display: block;
     width: auto;
     height: 300px;
+}
+.skills .resume-links {
+  display: block;
+  margin-top: 8px;
 }
 a {
 text-decoration: none;
