--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 body {
-    background: #b687e6;
+    background: #FFB7C5;
     font-family: Arial, Helvetica, sans-serif;
 }
 h1 {
     font-size: 55px;
-    color: ForestGreen;
+    color: SeaGreen;
     text-align: center;
 }
 .projects { 
@@ -29,7 +29,7 @@ h1 {
 a {
     text-decoration: underline;
     font-weight: bold;
-    color: rgb(58, 4, 83);
+    color: #3a0453;
 }
     .project p { 
     text-align: center;
